@@ -1,35 +1,37 @@
 package com.example.UCTalen.controller;
 
+import java.util.Map;
+
 import com.example.UCTalen.service.GeminiService;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Map;
+
 
 @RestController
 @RequestMapping("/api/reviews")
-@CrossOrigin(origins = "*") 
+@CrossOrigin(origins = "*")
 public class GeminiController {
 
     private final GeminiService geminiService;
 
-        public GeminiController(GeminiService geminiService) {
+    public GeminiController(GeminiService geminiService) {
         this.geminiService = geminiService;
     }
 
     @PostMapping("/generate-reply")
-    public ResponseEntity<String> generateReply(@RequestBody Map<String, String> requestBody) {
-        String reviewContent = requestBody.get("reviewContent");
-        
-        if (reviewContent == null || reviewContent.trim().isEmpty()) {
-            return ResponseEntity.badRequest().body("{\"error\": \"Nội dung review không được để trống!\"}");
-        }
+    public ResponseEntity<String> generateReply(@RequestBody Map<String, String> body) {
+        String reviewContent = body.get("reviewContent");
+        if (reviewContent == null || reviewContent.isBlank())
+            return ResponseEntity.badRequest().body("{\"error\": \"Review trống!\"}");
 
-        String aiResponse = geminiService.generateReply(reviewContent);
-        
         return ResponseEntity.ok()
                 .header("Content-Type", "application/json; charset=UTF-8")
-                .body(aiResponse);
+                .body(geminiService.generateReply(reviewContent));
     }
 
     // Thêm hàm này vào bên trong class GeminiController
